# hexchat-plugins

./: .gitignore  CMakeLists.txt  README.md
idle/: CMakeLists.txt  HexchatIdlePlugin.cpp  HexchatIdlePlugin.h  plugin.cpp
